--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=UTF-8
-jdbc.username=demo
-jdbc.password=demo
+jdbc.url=jdbc:mysql://42.121.108.236:3306/ape?useUnicode=true&characterEncoding=UTF-8
+jdbc.username=ape
+jdbc.password=ape
