--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.debug=false
 log4j.rootLogger=DEBUG, stdout 
 #,fileout
 
-log4j.logger.org.conan.taobao=DEBUG
+log4j.logger.org.aps=DEBUG
 log4j.logger.org.springframework=WARN
 log4j.logger.org.apache=WARN
 log4j.logger.javax.servlet=WARN
