--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>3.1.1.RELEASE</spring.version>
+    <spring.data>1.0.0.RC1</spring.data>
+    <hadoop.version>1.0.3</hadoop.version>
 	<slf4j.version>1.5.8</slf4j.version>
 	<log4j.version>1.2.15</log4j.version>
   </properties>
@@ -23,6 +25,11 @@
       <id>spring-maven-release</id>
       <name>Spring Maven Release Repository</name>
       <url>http://maven.springframework.org/release</url>
+    </repository>
+    <repository>
+      <id>spring-libs-release</id>
+      <name>Spring Libs Release Repository</name>
+      <url>http://repo.springsource.org/libs-release</url>
     </repository>
     <repository>
       <id>spring-maven-milestone</id>
@@ -61,6 +68,25 @@
 	  <artifactId>spring-tx</artifactId>
 	  <version>${spring.version}</version>
 	</dependency>
+	
+	<dependency>
+	  <groupId>org.springframework.data</groupId>
+	  <artifactId>spring-data-hadoop</artifactId>
+	  <version>${spring.data}</version>
+	</dependency>
+	
+	<dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-jdbc</artifactId>
+	  <version>${spring.version}</version>
+	</dependency>
+	
+	<dependency>
+	  <groupId>org.apache.hadoop</groupId>
+	  <artifactId>hadoop-core</artifactId>
+	  <version>${hadoop.version}</version>
+	</dependency>
+	
 
 	
 	<!--
@@ -90,11 +116,7 @@
 	 
 	
 	 
-	<dependency>
-	  <groupId>org.springframework</groupId>
-	  <artifactId>spring-jdbc</artifactId>
-	  <version>${spring.version}</version>
-	</dependency>
+	
 	 
 	<dependency>
 	  <groupId>org.springframework</groupId>
