--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,20 @@
 	  <version>${hadoop.version}</version>
 	</dependency>
 	
+	<dependency>
+		<groupId>commons-net</groupId>
+		<artifactId>commons-net</artifactId>
+		<version>2.0</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>1.3.2</version>
+	</dependency>
+            
+            
+	
 
 	
 	<!--
