--- a/pom.xml
+++ b/pom.xml
@@ -62,44 +62,42 @@
 	  <artifactId>spring-context</artifactId>
 	  <version>${spring.version}</version>
 	</dependency>
-	
-	<dependency>
+	<dependency> 
 	  <groupId>org.springframework</groupId>
 	  <artifactId>spring-tx</artifactId>
 	  <version>${spring.version}</version>
 	</dependency>
-	
 	<dependency>
 	  <groupId>org.springframework.data</groupId>
 	  <artifactId>spring-data-hadoop</artifactId>
 	  <version>${spring.data}</version>
 	</dependency>
-	
 	<dependency>
 	  <groupId>org.springframework</groupId>
 	  <artifactId>spring-jdbc</artifactId>
 	  <version>${spring.version}</version>
 	</dependency>
-	
 	<dependency>
 	  <groupId>org.apache.hadoop</groupId>
 	  <artifactId>hadoop-core</artifactId>
 	  <version>${hadoop.version}</version>
 	</dependency>
-	
 	<dependency>
 		<groupId>commons-net</groupId>
 		<artifactId>commons-net</artifactId>
 		<version>2.0</version>
 	</dependency>
-	
 	<dependency>
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-io</artifactId>
 		<version>1.3.2</version>
 	</dependency>
-            
-            
+    <dependency>
+		<groupId>com.jcraft</groupId>
+		<artifactId>jsch</artifactId>
+		<version>0.1.49</version>
+	</dependency>
+                    
 	
 
 	
@@ -195,13 +193,13 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-test</artifactId>
 		<version>${spring.version}</version>
-		<scope>test</scope>
+		<scope>compile</scope>
 	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8</version>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
  
   </dependencies>
