--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
 		<artifactId>jsch</artifactId>
 		<version>0.1.49</version>
 	</dependency>
+	<dependency>
+		<groupId>net.sf.opencsv</groupId>
+		<artifactId>opencsv</artifactId>
+		<version>2.0</version>
+	</dependency>
                     
 	
 
