--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.ape.data</groupId>
-  <artifactId>Core</artifactId>
+  <artifactId>Plantform</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -13,7 +13,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>3.1.1.RELEASE</spring.version>
-    <spring.data>1.0.0.RC1</spring.data>
+    <spring.data>1.0.0.RELEASE</spring.data>
     <hadoop.version>1.0.3</hadoop.version>
 	<slf4j.version>1.5.8</slf4j.version>
 	<log4j.version>1.2.15</log4j.version>
@@ -67,9 +67,9 @@
 	  <version>${spring.version}</version>
 	</dependency>
 	<dependency>
-	  <groupId>org.springframework.data</groupId>
-	  <artifactId>spring-data-hadoop</artifactId>
-	  <version>${spring.data}</version>
+	 <groupId>org.springframework.data</groupId>
+	 <artifactId>spring-data-hadoop</artifactId>
+	 <version>${spring.data}</version>
 	</dependency>
 	<dependency>
 	  <groupId>org.springframework</groupId>
@@ -104,6 +104,23 @@
                     
 	
 
+    <!-- apache mina -->
+    <dependency>
+		<groupId>org.apache.mina</groupId>
+		<artifactId>mina-core</artifactId>
+		<version>2.0.0-M3</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.ftpserver</groupId>
+		<artifactId>ftplet-api</artifactId>
+		<version>1.0.6</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.ftpserver</groupId>
+		<artifactId>ftpserver-core</artifactId>
+		<version>1.0.6</version>
+	</dependency>
+	            
 	
 	<!--
 	<dependency>
@@ -147,6 +164,11 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
+    <dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>${slf4j.version}</version>
+	</dependency>
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
